[package]
name = "bevy_game_1"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.12.0", features = [] }
const-tweaker = "0.3.1"

[features]
default = ["dynamic"]
dynamic = ["bevy/dynamic_linking"]
